# agentguard

./: PREREG_phase0_detector.md  PREREG_phase1_paper9.md  PREREG_phase2_honest_auroc.md  PREREG_realtest_fs.md  PREREG_realtest_v4_realistic.md  PREREG_sae_autopsy.md  PREREG_sae_counterfactual.md  PREREG_sae_layer_sweep.md  PREREG_steer_felt.md  README.md  RESULTS_h5_full_loop.md  RESULTS_phase0_detector.md  RESULTS_phase1_paper9.md  RESULTS_phase2_honest_auroc.md  RESULTS_phase3_crossmodel.md  RESULTS_realtest_fs.md  RESULTS_realtest_v4_realistic.md  RESULTS_realtest_v5_varied.md  RESULTS_sae_autopsy.md  RESULTS_steer_felt.md  SCOPE.md  eval_agentguard.py  exp_h5_full_loop.py  pyproject.toml
agentguard/: __init__.py  actuate.py  baselines.py  firewall.py  hooks.py  intent.py  policy.py  provenance.py  types.py
bench/: __init__.py  make_fig.py  run_bench.py  scenarios.py
paper/: .zenodo_commit_ontology.json  .zenodo_paper10.json  EVAL_commit_ontology.md  EVAL_paper10.md  EVAL_paper9.md  authorization_direction.tex  commit_ontology.tex  eval_commit_ontology.py  eval_paper10.py  eval_paper9.py  felt_not_granted.tex  make_figs.py  make_figs10.py  make_figs_co.py  zenodo_upload_commit_ontology.py  zenodo_upload_paper10.py  zenodo_upload_paper9.py
results/: agentguard_h5_full_loop.json  agentguard_phase0_detector.json  agentguard_phase1_detector_full.json  agentguard_phase2_honest_auroc.json  agentguard_realtest_fs.json  agentguard_realtest_fs_adv.json  agentguard_realtest_fs_real.json  agentguard_realtest_fs_v5.json  agentguard_sae_autopsy_matched.json  (+5 more)
(+4 files in other folders)
